RESOLVED FIXED248063
text is unexpectedly rendered with font smoothing in tests with full GPU process
https://bugs.webkit.org/show_bug.cgi?id=248063
Summary text is unexpectedly rendered with font smoothing in tests with full GPU process
Cameron McCormack (:heycam)
Reported 2022-11-17 16:00:03 PST
The "should use font smoothing for testing" state is not propagated to the GPU process.
Attachments
Cameron McCormack (:heycam)
Comment 1 2022-11-17 16:00:19 PST
Cameron McCormack (:heycam)
Comment 2 2022-11-17 16:31:42 PST
EWS
Comment 3 2022-11-19 23:44:28 PST
Committed 256885@main (cca77c936d11): <https://commits.webkit.org/256885@main> Reviewed commits have been landed. Closing PR #6615 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.